# libft_amartel

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  flake.nix  ft_atoi.c  ft_calloc.c  ft_isdigit.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strstim.c  (+4 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check.yml  flake8.yml  norminette.yml  sanity_checks.yml
includes/: atoi.h  ft_dprintf.h  get_next_line.h  is.h  libft.h  lst.h  meson.build  printf.h
src/: ft_abs.c  ft_atoi.c  ft_atoi_base.c  ft_atol.c  ft_atoll.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  (+14 more)
src/ft_dprintf/: ft_dprintf.c
src/ft_dprintf/type_handler/: basic_type.c
src/get_next_line/: get_next_line_utils.c
src/printf/: ft_printf.c
tools/: check_missing_sources.py  todo.md
tools/utils/: BuildSystem.py  Makefile.py  Meson.py
